# LogicTesting

./: CMakeLists.txt  main.cpp
AbstractProposition/: CMakeLists.txt
AbstractProposition/Test/: CMakeLists.txt  PropositionObjectsTestCases.cpp
AbstractProposition/inc/: BinaryOperator.h  Conjunction.h  Disjunction.h  Implication.h  Negation.h  Proposition.h  PropositionVariable.h
AbstractProposition/src/: BinaryOperator.cpp  Conjunction.cpp  Disjunction.cpp  Implication.cpp  Negation.cpp  Proposition.cpp  PropositionVariable.cpp
